fix: increase JF cli timeout and retries

--- a/.github/workflows/reusable-gitops-ci-maven-jib.yml
+++ b/.github/workflows/reusable-gitops-ci-maven-jib.yml
@@ -152,6 +152,8 @@ jobs:
       if: ${{success() && env.SCAN_CODE=='true'}}
       run: |
         export JFROG_CLI_LOG_LEVEL=DEBUG
+        export JFROG_CLI_DEPENDENCY_SCAN_TIMEOUT=600
+        export JFROG_CLI_DEPENDENCY_SCAN_RETRIES=5
 
         jf config add \
         --url=https://trialt6dmgx.jfrog.io \
