--- a/.github/workflows/reusable-gitops-ci-maven-jib.yml
+++ b/.github/workflows/reusable-gitops-ci-maven-jib.yml
@@ -162,7 +162,7 @@ jobs:
         --interactive=false
 
         jf config show
-        jf audit --watches=ci-build-scan --fail=false --mvn
+        jf audit --watches=ci-build-scan --fail=false --mvn --server-timeout=600
 
         jf docker scan trialt6dmgx.jfrog.io/aigi-dstores-docker-snapshot-local/arc/dstores/fe/fe-api:9a4a769 \
         --watches=ci-build-scan \
