--- a/.github/workflows/reusable-gitops-ci-maven-jib.yml
+++ b/.github/workflows/reusable-gitops-ci-maven-jib.yml
@@ -187,8 +187,8 @@ jobs:
       if: ${{ success() && env.SCAN_CODE == 'true' }}
       uses: sonarsource/sonarqube-scan-action@v3.0.0
       env:
-        GITHUB TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        SONAR TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         SONAR_HOST_URL: https://sonarcloud.io
       with:
         args: >
