fix: added branch name in sonar scan

--- a/.github/workflows/reusable-gitops-ci-maven-jib.yml
+++ b/.github/workflows/reusable-gitops-ci-maven-jib.yml
@@ -195,6 +195,7 @@ jobs:
             -Dsonar.organization=mahajanatul525
             -Dsonar.projectKey=mahajanatul525
             -Dsonar.projectName=ch-doctor-crud-service
+            -Dsonar.branch.name=master
             -Dsonar.qualitygate.wait=${{ inputs.sonar-qualitygate-wait }}
             -Dsonar.java.binaries=${{ inputs.sonar-scan-dir}}
   
