--- a/.github/workflows/reusable-gitops-ci-maven-jib.yml
+++ b/.github/workflows/reusable-gitops-ci-maven-jib.yml
@@ -193,7 +193,7 @@ jobs:
       with:
         args: >
             -Dsonar.organization=mahajanatul525
-            -Dsonar.projectKey=mahajanatul525
+            -Dsonar.projectKey=caring-horse
             -Dsonar.projectName=ch-doctor-crud-service
             -Dsonar.branch.name=master
             -Dsonar.qualitygate.wait=${{ inputs.sonar-qualitygate-wait }}
