--- a/.github/workflows/reusable-gitops-ci-maven-jib.yml
+++ b/.github/workflows/reusable-gitops-ci-maven-jib.yml
@@ -219,7 +219,7 @@ jobs:
       uses: peter-evans/repository-dispatch@v2
       id: notify-deployment-repository
       with:
-        repository: ${{ steps.props.outputs.deployment_repo }}
+        repository: mahajanatul525/${{ steps.props.outputs.deployment_repo }}
         token: ${{ secrets.GITHUB_CI_APP_PRIVATE_KEY }}
         event-type: ci-notification
         client-payload: |
